package strategymode.code;

/**
 * Created by Hhhh 2019-04-29 16:41
 */
public interface FlyBehavior {

    void fly();
}
